# distributed_lab_challenge

./: pyproject.toml
Hitler_crawler/: README.md  main.py
Long Arithmetic/: BigInt.java  README.md
Maze/: README.md  maze.ipynb
Orderbook/: README.md  main.py
Students_capital/: README.md  main.py  test.py
Website_analytics/: README.md  day1.csv  day2.csv  main.py
